# vigir_ocs_common

./: .gitignore  README.md
rqt_image_view_custom/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_image_view_custom/include/rqt_image_view_custom/: image_view.h
rqt_image_view_custom/scripts/: rqt_image_view_custom
rqt_image_view_custom/src/rqt_image_view_custom/: image_view.cpp  main_3d_view_widget.cpp  main_3d_view_widget.ui
vigir_interactive_marker_server_custom/: CMakeLists.txt  package.xml
vigir_ocs_back_joint_limit/: CMakeLists.txt  package.xml
vigir_ocs_back_joint_limit/src/: joint_limit.cpp  joint_limit.h  joint_limit.ui  main.cpp  vigir_ocs_back_joint_limit.pro
vigir_ocs_base_3d_view/: CMakeLists.txt  package.xml
vigir_ocs_base_3d_view/src/: base_3d_view.cpp  base_3d_view.cpp.orig  base_3d_view.h  base_3d_view.h.orig  base_context_menu.cpp  base_context_menu.h  context_menu_manager.cpp  context_menu_manager.h  footstep_vis_manager.cpp  footstep_vis_manager.h  hotkey_manager.h
vigir_ocs_base_3d_view/src/ui/: cartesian_motion_widget.cpp  cartesian_motion_widget.h  cartesian_motion_widget.ui  circular_motion_widget.cpp  circular_motion_widget.h  circular_motion_widget.ui
vigir_ocs_behavior_manager/: CMakeLists.txt  package.xml  setup.py
vigir_ocs_behavior_manager/scripts/: behavior_manager
vigir_ocs_behavior_manager/src/: behavior_manager.cpp  behavior_manager.h  behavior_manager.py  behavior_notification.cpp  behavior_notification.h  behavior_notification.ui  behavior_relay.cpp  behavior_relay.h  complex_action_server.h  complex_action_server.py  complex_action_server_imp.h  main.cpp  vigir_ocs_behavior_manager.py
vigir_ocs_behavior_manager/src/vigir_ocs_behavior_manager/: vigir_ocs_behavior_manager.py
vigir_ocs_camera_view/: CMakeLists.txt  package.xml
vigir_ocs_camera_view/icons/: get_image_play.psd  get_image_step.psd  image_transparency.psd  mg_play.psd  mg_step.psd
vigir_ocs_camera_view/src/: camera_view.cpp  camera_view.h  main.cpp  main_widget.cpp
vigir_ocs_camera_view/src/ui/: camera_view_main_widget.cpp  camera_view_main_widget.h  camera_view_main_widget.pro  camera_view_main_widget.ui  camera_view_widget.cpp  camera_view_widget.h  camera_view_widget.pro  camera_view_widget.ui
vigir_ocs_camera_viewer_custom/: CMakeLists.txt  package.xml
vigir_ocs_camera_viewer_custom/src/: camera_viewer_custom.cpp  camera_viewer_custom.h  empty_view_controller.cpp  image_display_custom.cpp  image_display_custom.h  main.cpp  main_widget.cpp
vigir_ocs_camera_viewer_custom/src/ui/: camera_view_widget.pro  camera_viewer_custom_widget.cpp  camera_viewer_custom_widget.h  camera_viewer_custom_widget.ui
vigir_ocs_context_menu_manager/: CMakeLists.txt  package.xml
vigir_ocs_context_menu_manager/src/: context_menu_manager.cpp  context_menu_manager.h
vigir_ocs_footstep_manager/: CMakeLists.txt  package.xml  vigir_footstep_manager.xml
vigir_ocs_footstep_manager/src/: footstep_manager.cpp  footstep_manager.h  main.cpp
vigir_ocs_four_window_test/: CMakeLists.txt  package.xml
vigir_ocs_four_window_test/src/: main.cpp
vigir_ocs_four_window_test/src/ui/: four_window_test_widget.cpp  four_window_test_widget.h  four_window_test_widget.pro  four_window_test_widget.ui
vigir_ocs_ghost_control_widget/: CMakeLists.txt  package.xml
vigir_ocs_ghost_control_widget/src/: main.cpp
vigir_ocs_ghost_control_widget/src/ui/: ghost_control_widget.cpp  ghost_control_widget.h  ghost_control_widget.pro  ghost_control_widget.ui
vigir_ocs_glance_hub/: CMakeLists.txt  package.xml
vigir_ocs_glance_hub/src/: glancehub.cpp  glancehub.h  glancehub.ui  main.cpp
vigir_ocs_glance_hub_sbar/: CMakeLists.txt  package.xml
vigir_ocs_glance_hub_sbar/src/: glancehubSbar.cpp  glancehubSbar.h  glancehubSbar.ui  glancehubsbar.cpp  glancehubsbar.h  glancehubsbar.ui  main.cpp  vigir_ocs_glance_hub_sbar.pro
vigir_ocs_glance_hub_stat/: CMakeLists.txt  package.xml
vigir_ocs_glance_hub_stat/src/: glancehubstat.cpp  glancehubstat.h  glancehubstat.ui  main.cpp  vigir_ocs_glance_hub_stat.pro
vigir_ocs_global_hotkey/: CMakeLists.txt  package.xml
vigir_ocs_global_hotkey/src/: global_hotkey.cpp  global_hotkey.h  main.cpp
vigir_ocs_grasp_widget/: CMakeLists.txt  package.xml
vigir_ocs_grasp_widget/launch/: l_robotiq_tf.yaml  l_stump_tf.yaml  r_robotiq_tf.yaml  r_stump_tf.yaml
vigir_ocs_grasp_widget/src/: graspWidget.cpp  graspWidget.h  graspWidget.ui  handOffsetWidget.cpp  handOffsetWidget.h  handOffsetWidget.ui  main.cpp  vigir_ocs_grasp_widget.pro
vigir_ocs_hotkey_manager/: CMakeLists.txt  package.xml
vigir_ocs_hotkey_manager/src/: hotkey_manager.cpp  hotkey_manager.h
vigir_ocs_hotkey_relay/: CMakeLists.txt  package.xml
vigir_ocs_hotkey_relay/src/: hotkey_relay.cpp  hotkey_relay.h  main.cpp
vigir_ocs_image_manager/: CMakeLists.txt  package.xml
vigir_ocs_image_manager/src/: main.cpp
vigir_ocs_image_manager/src/ui/: image_manager_widget.cpp  image_manager_widget.h  image_manager_widget.pro  image_manager_widget.ui
vigir_ocs_image_nodelet/: CMakeLists.txt  package.xml  vigir_template_nodelet.xml
vigir_ocs_image_nodelet/src/: image_nodelet.cpp  image_nodelet.h  main.cpp
vigir_ocs_integration_test/: CMakeLists.txt  package.xml
vigir_ocs_integration_test/src/: main.cpp
vigir_ocs_interactive_marker_server_nodelet/: CMakeLists.txt  package.xml  vigir_interactive_marker_server_nodelet.xml
vigir_ocs_interactive_marker_server_nodelet/src/: .interactive_marker_server_nodelet.cpp.kate-swp  interactive_marker_server_nodelet.cpp  interactive_marker_server_nodelet.h  main.cpp
vigir_ocs_log_sbar/: CMakeLists.txt  package.xml
vigir_ocs_log_sbar/src/: logSbar.cpp  logSbar.h  logSbar.ui  main.cpp  miniError.cpp  miniError.h  miniError.ui  miniJoint.cpp  miniJoint.h  miniJoint.ui
vigir_ocs_main_3d_view/: CMakeLists.txt  package.xml
vigir_ocs_main_3d_view/src/: main.cpp  main_3d_view.cpp  main_3d_view.h  main_widget.cpp
vigir_ocs_main_3d_view/src/ui/: main_3d_view_widget.cpp  main_3d_view_widget.h  main_3d_view_widget.pro  main_3d_view_widget.ui
(+618 files in other folders)
