<?xml version="1.0"?>
<package>
  <name>vigir_ocs_behavior_manager</name>
  <version>0.1.0</version>
  <description>Behavior Manager</description>
  <maintainer email="bwright5@vt.edu">Brian Wright</maintainer>
  <license>TORC</license>
  <author email="bwright5@vt.edu">Brian Wright</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>vigir_ocs_msgs</build_depend>
  <build_depend>flexbe_input</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>flexbe_msgs</build_depend>
  <build_depend>vigir_footstep_planning_msgs</build_depend>
  

  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>vigir_ocs_msgs</run_depend>
  <run_depend>flexbe_input</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>flexbe_msgs</run_depend>
  <run_depend>vigir_footstep_planning_msgs</run_depend>
  



  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
