<?xml version="1.0"?>
<package>
  <name>vigir_ocs_camera_view</name>
  <version>0.1.0</version>
  <description>The OCS Camera View display package</description>
  <maintainer email="fbacim@vt.edu">Felipe Bacim</maintainer>
  <license>TORC</license>
  <author email="fbacim@vt.edu">Felipe Bacim</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>flor_perception_msgs</build_depend>
  <build_depend>flor_ocs_msgs</build_depend>
  <build_depend>vigir_ocs_rviz_plugins</build_depend>
  <build_depend>vigir_ocs_base_3d_view</build_depend>
  <build_depend>vigir_ocs_notification_system</build_depend>
  <build_depend>vigir_ocs_hotkey_manager</build_depend>
  <build_depend>vigir_ocs_empty_view_controller</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>flor_perception_msgs</run_depend>
  <run_depend>flor_ocs_msgs</run_depend>
  <run_depend>vigir_ocs_rviz_plugins</run_depend>
  <run_depend>vigir_ocs_base_3d_view</run_depend>
  <run_depend>vigir_ocs_notification_system</run_depend>
  <run_depend>vigir_ocs_hotkey_manager</run_depend>
  <run_depend>vigir_ocs_empty_view_controller</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
