<?xml version="1.0"?>
<package>
  <name>vigir_ocs_context_menu_manager</name>
  <version>0.1.0</version>
  <description>The OCS base 3d view package</description>
  <maintainer email="bwright5@vt.edu">Brian Wright</maintainer>
  <license>TORC</license>
  <author email="bwright5@vt.edu">Brian Wright</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rviz</build_depend>


  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rviz</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
